Added about/whats it for text.

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-Drupal 7 only.
+Drupal 7 module.  
 
-Notesee is a module which lets those with the correct permissions to add and edit notes on a page.
+What does it do and how is this useful?
+
+Lets users put notes on pages.  You can use it for reviewing - e.g. let a user browse around a site, posting notes on pages that need fixing or adjusting.
 
 Instructions:
 
